# chora-base

./: .chorabase  .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.backup  AGENT_SETUP_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SETUP_GUIDE.md  COMPUTER-TRANSITION-GUIDE.md  CONTINUITY-2025-11-15.md  CONTRIBUTING.md  COPIER-QUESTIONNAIRE-DESIGN.md  DISCOVERABILITY-IMPROVEMENTS.md  EXTRACTION_SUMMARY.md  FAST-SETUP-IMPLEMENTATION-SUMMARY.md  GETTING-STARTED.md  NEXT_SESSION_CONTEXT.md  PROJECT_OVERVIEW.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  RELEASE-PREPARATION.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v5.3.0.md  RELEASE_SUCCESS_v0.1.5.md  RELEASE_v0.1.5.md  ROADMAP.md  UPGRADE_1.9.1_TO_1.9.2.md  V3_MIGRATION_STATUS.md  VERIFICATION-REPORT-SAP-047-UPDATED.md  VERIFICATION-REPORT-SAP-047.md  adoption-dashboard.html  adoption-history.jsonl  copier-post-generation.py  copier.yml  copier.yml.backup  (+12 more)
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.meta.json  issues.jsonl
.chora/: user-preferences.yaml.template  work-contexts-archive.yaml  work-contexts.yaml
.claude/: settings.local.json
.codex/: cleanup-prompt.md  release-b-prompt.md
.githooks/: README.md  commit-msg  pre-commit  pre-commit-windows-compat  pre-push
.github/: pull_request_template.md
blueprints/: AGENTS.md.blueprint  CHANGELOG.md.blueprint  CLAUDE.md.blueprint  README.md.blueprint  ROADMAP.md.blueprint  server.py.blueprint
capabilities/: alias-mapping.json  chora.awareness.agent_awareness.yaml  chora.awareness.capability_registry_discovery.yaml  chora.awareness.development_lifecycle.yaml  chora.awareness.dogfooding_patterns.yaml  chora.awareness.link_validation_reference_management.yaml  chora.awareness.memory_system.yaml  chora.awareness.metrics_tracking.yaml  chora.awareness.namespace_resolution.yaml  chora.awareness.publishing_automation.yaml  chora.awareness.sap_adoption_verification.yaml  chora.awareness.sap_generation.yaml  chora.awareness.sap_self_evaluation.yaml  chora.awareness.task_tracking.yaml  chora.devex.automation_scripts.yaml  chora.devex.bootstrap.yaml  chora.devex.capability_server_template.yaml  chora.devex.ci_cd_workflows.yaml  chora.devex.composition.yaml  chora.devex.docker_operations.yaml  chora.devex.documentation_framework.yaml  chora.devex.interface_design.yaml  chora.devex.mcp_server_development.yaml  chora.devex.multi_interface.yaml  chora.devex.project_bootstrap.yaml  chora.devex.quality_gates.yaml  chora.devex.registry.yaml  chora.devex.testing_framework.yaml  chora.infrastructure.chora_base.yaml  chora.infrastructure.inbox.yaml  chora.infrastructure.sap_framework.yaml  chora.integration.chora_compose_integration.yaml  chora.integration.chora_compose_meta.yaml  chora.integration.react_accessibility.yaml  chora.integration.react_e2e_testing.yaml  chora.integration.react_internationalization.yaml  chora.integration.react_monorepo_architecture.yaml  chora.integration.react_performance.yaml  chora.integration.react_realtime_synchronization.yaml  chora.react.authentication.yaml  (+10 more)
claude/: CHECKPOINT_PATTERNS.md  CONTEXT_MANAGEMENT.md  FRAMEWORK_TEMPLATES.md  METRICS_TRACKING.md  README.md
dev-docs/: AGENTS.md  CLAUDE.md
docker/: CLAUDE.md
docs/: ARCHITECTURE.md  BENEFITS.md  DISTRIBUTION-STRATEGY.md  DOCUMENTATION_PLAN.md  ECOSYSTEM_ONBOARDING.md  GLOSSARY.md  PHASE-3-PILOT-VALIDATION-FRAMEWORK.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_VALIDATION_REPORT.md  SAP_QUALITY_EVALUATION_REPORT.md  UPGRADE_DOCUMENTATION_SUMMARY.md  git-workflow-amem-integration.md  git-workflow-maintenance.md  git-workflow-quickstart.md  inbox-generator-usage.md
docs/project-docs/verification/verification-runs/2025-11-08-13-14-fast-setup-l1/generated-project/: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
docs/project-docs/verification/verification-runs/2025-11-08-13-14-fast-setup-l1/generated-project/.github/workflows/: codeql.yml  release.yml
docs/project-docs/verification/verification-runs/2025-11-08-13-14-fast-setup-l1/generated-project/src/sap_verification_test_server/: __init__.py  server.py
docs/project-docs/verification/verification-runs/2025-11-08-13-14-fast-setup-l1/generated-project/src/sap_verification_test_server/mcp/: __init__.py
examples/full-featured-with-vision/: AGENTS.md  CHANGELOG.md  ROADMAP.md  pyproject.toml
examples/full-featured-with-vision/.github/workflows/: lint.yml
examples/full-featured-with-vision/dev-docs/vision/: CAPABILITY_EVOLUTION.example.md
examples/full-featured-with-vision/scripts/: bump-version.sh  check-env.sh  diagnose.sh  integration-test.sh  setup.sh
examples/pypi-demo-alpha/: README.md  pyproject.toml
examples/pypi-demo-alpha/.github/workflows/: release.yml
examples/pypi-demo-alpha/pypi_demo_alpha/: __init__.py
examples/pypi-demo-gamma/: README.md  pyproject.toml
examples/pypi-demo-gamma/.github/workflows/: release.yml
examples/pypi-demo-gamma/pypi_demo_gamma/: __init__.py
features/: bidirectional-integration.feature  coordination-request-generation.feature
getting-started/: AGENTS.md
inbox/: CLAUDE.md  DOCUMENTATION_STANDARD.md  IMPLEMENTATION_SUMMARY.md  INBOX_PROCESSING_SUMMARY.md  INBOX_PROTOCOL.md  INTAKE_TRIAGE_GUIDE.md  chora-base-v205-verification.md  chora-base-v206-still-fails.md  chora-base-v208-failure-analysis.md  chora-compose-docker.md  coda-mcp-docker.md  copier-bracket-delimiter-investigation.md  copier-delimiter-research-task.md  copier-delimiter-solution-analysis.md  docker-enhancements-v1.9.1-summary.md  mcp-n8n-docker.md  mcp-n8n-v207-comments.md  mcp-orchestration_END_TO_END_PROCESS.md  v2.0.8-critical-findings.md  v2.0.8-final-recommendation.md  v2.0.8-session-summary.md  v2.0.8-status.md  v2.0.8-update-to-research.md  v2.0.9-fix-plan.md
manifests/: star.yaml
project-docs/: 100_PERCENT_ADOPTION.md  4-WEEK_SUMMARY.md  AGENTS.md  CHORA_BASE_ADOPTION_PLAN.md  DEVELOPMENT_LIFECYCLE.md  END_TO_END_PROCESS.md  WAVE_1X_PLAN.md  WAVE_2.0_COMPLETE.md  (+12 more)
(+2025 files in other folders)
