[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-demo-alpha"
version = "0.1.0"
description = "SAP-028 OIDC Publishing Demonstration Package (Alpha)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "chora-base", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/liminalcommons/chora-base"
Documentation = "https://github.com/liminalcommons/chora-base/tree/main/examples/pypi-demo-alpha"
Repository = "https://github.com/liminalcommons/chora-base"

[tool.hatch.build.targets.wheel]
packages = ["pypi_demo_alpha"]
