[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-demo-gamma"
version = "0.1.0"
description = "SAP-028 OIDC Publishing with Advanced Security Monitoring (Gamma)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "chora-base", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/liminalcommons/chora-base"
Documentation = "https://github.com/liminalcommons/chora-base/tree/main/examples/pypi-demo-gamma"
Repository = "https://github.com/liminalcommons/chora-base"
"Security Policy" = "https://github.com/liminalcommons/chora-base/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["pypi_demo_gamma"]
