[project]
name = "sap-verification-test-server"
version = "0.1.0"
description = "SAP Verification Test Server - MCP server for sapverify operations"
authors = [
    {name = "SAP Verifier", email = "verify@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",  # CLI framework - remove if not using CLI
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "mypy==1.11.0",
    "ruff==0.7.0",
    "black==24.10.0",
    "pre-commit==4.0.1",
]
release = [
    "build==1.0.3",
    "twine==4.0.2",
]

[project.scripts]
sap-verification-test-server = "sap_verification_test_server.mcp.server:main"
sap-verification-test-server-memory = "sap_verification_test_server.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap_verification_test_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["temp/"]

# Allow missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic", "pydantic.*", "pydantic_settings"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["click", "click.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.coverage.run]
source = ["src/sap_verification_test_server"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/temp/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.sap_verification_test_server.logging]
format = "json"              # json or text
level = "INFO"               # DEBUG, INFO, WARNING, ERROR, CRITICAL
file = "logs/sap-verification-test-server.log"    # Log file path
max_bytes = 10485760         # 10MB max file size
backup_count = 5             # Keep 5 rotated log files
retention_days = 30          # Delete logs older than 30 days